# Prompt-Run

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  labels.yml
examples/: classify.prompt  extract-json.prompt  summarize.prompt  translate.prompt
prompt_run/: __init__.py  cli.py  diff.py  parser.py  renderer.py  runner.py
prompt_run/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
tests/: conftest.py  test_cli.py  test_parser.py  test_providers.py  test_renderer.py  test_runner.py
